[build-system]
requires = [
    "scikit-build-core >=0.7.0",
    "nanobind >=1.8.0"
    ]
build-backend = "scikit_build_core.build"

[project]
name = "curadon"
version = "0.1.0"
description = "Python bindings for curadon"
readme = "../README.md"
requires-python = ">=3.8"
authors = [
    { name = "David Frank", email = "frankd@in.tum.de" },
    { name = "Tobias Lasser", email = "lasser@cit.tum.de" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.25.0",
    "torch>=2.0.0",
    "phantominator>=0.7.0",
]

[project.optional-dependencies]
benchmark = [
    "rich>=13.7.0",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.7"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
